[package]
name = "libp2prs-noise"
version = "0.3.0"
license = "MIT"
description = "Cryptographic handshake protocol using the noise framework."
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
bytes = "0.5"
curve25519-dalek = "2.0.0"
futures = { version = "0.3", features = ["std"], default-features = false }
lazy_static = "1.2"
libp2prs-core = { path = "../../core", version = "0.3.0" }
log = "0.4"
prost = "0.6"
rand = "0.7"
sha2 = "0.8.0"
static_assertions = "1"
x25519-dalek = "1.1.0"
zeroize = "1"
async-trait = "0.1"
pin-project = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
snow = { version = "0.7.1", features = ["ring-resolver"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
snow = { version = "0.7.1", features = ["default-resolver"], default-features = false }

[dev-dependencies]
env_logger = "0.8"
quickcheck = "0.9.0"
sodiumoxide = "0.2.5"
libp2prs-runtime = { path = "../../runtime", version = "0.3.0", features = ["async-std"] }
libp2prs-tcp = { path = "../../transports/tcp", version = "0.3.0" }

[build-dependencies]
prost-build = "0.6"

