[package]
name = "libp2p-ping"
edition = "2018"
description = "Ping protocol for libp2p"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
libp2p-core = { path = "../../core", version = "0.1.0", package = "libp2p-core" }
libp2p-swarm = { path = "../../swarm", version = "0.1.0", package = "libp2p-swarm" }
async-trait = "0.1"
log = "0.4.1"
rand = "0.7.2"
futures-timer = "3"
futures = "0.3"

[dev-dependencies]
async-std = "1.6.2"
quickcheck = "0.9.0"
libp2p-tcp = { path = "../../transports/tcp", version = "0.0.1" }
