[package]
name = "libp2p-plaintext"
version = "0.1.0"
license = "MIT"
description = "plaintext encryption protocol for p2p"
authors = ["kingwel-xie <kingwel.xie@139.com>"]
repository = "https://github.com/pld/libp2p-rs"
edition = "2018"

[dependencies]
libp2p-core = { path = "../../core", version = "0.1.0", package = "libp2p-core" }
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
bytes = "0.5"
futures = "0.3.0"
log = "0.4.1"
async-trait = "0.1"
prost = "0.6.1"
secp256k1 = "0.17"


[dev-dependencies]
env_logger = "0.6"
criterion = "0.3"
async-std = "1.6"

[build-dependencies]
prost-build = "0.6"