[package]
name = "plaintext"
version = "0.1.0"
license = "MIT"
description = "Plaintext encryption dummy protocol for libp2p "
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
readme = ""
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
libp2p-core = { path = "../../core", version = "0.1.0", package = "libp2p-core" }
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
bytes = "0.5"
futures = "0.3.0"
log = "0.4.1"
async-trait = "0.1"
prost = "0.6.1"
secp256k1 = "0.17"


[dev-dependencies]
env_logger = "0.6"
criterion = "0.3"
async-std = "1.6"

[build-dependencies]
prost-build = "0.6"