[package]
name = "libp2prs-plaintext"
version = "0.2.2"
license = "MIT"
description = "Plaintext encryption dummy protocol for libp2p "
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
libp2prs-core = { path = "../../core", version = "0.2.2" }
libp2prs-traits = { path = "../../traits", version = "0.2.1" }
bytes = "0.5"
futures = { version = "0.3", features = ["std"], default-features = false }
log = "0.4"
async-trait = "0.1"
prost = "0.6"


[dev-dependencies]
env_logger = "0.8"
libp2prs-runtime = { path = "../../runtime", version = "0.2.1", features = ["async-std"] }

[build-dependencies]
prost-build = "0.6"