[package]
name = "pnet"
edition = "2018"
description = "Private swarm support for libp2p"
version = "0.1.0"
authors = ["kuang <kuang_ql@hisuntech.com>"]
license = "MIT"
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
futures = "0.3.1"
log = "0.4.8"
salsa20 = "0.3.0"
sha3 = "0.8"
rand = "0.7"
pin-project = "0.4.17"
async-trait = "0.1"

[dev-dependencies]
quickcheck = "0.9.0"
