[package]
name = "secio"
version = "0.1.0"
license = "MIT"
description = "Secio encryption protocol for p2p"
authors = ["kingwel-xie <kingwel.xie@139.com>"]
repository = "https://github.com/pld/libp2p-rs"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["network", "peer-to-peer", "security"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "molc" ]
all-features = false
no-default-features = true

[dependencies]
libp2p-core = { path = "../../core", version = "0.1.0", package = "libp2p-core" }
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
bytes = "0.5"
futures = "0.3.0"
log = "0.4.1"
async-trait = "0.1"

secp256k1 = "0.17"
rand = "0.7"
ring = "0.16.5"
unsigned-varint = "0.3"
bs58 = "0.3.0"
prost = "0.6.1"
aes-ctr = "0.4.0"
stream-cipher = "0.4.1"

[build-dependencies]
prost-build = "0.6.1"

[dev-dependencies]
env_logger = "0.6"
criterion = "0.3"
async-std = "1.6"

[[bench]]
name = "bench"
harness = false
