[package]
name = "libp2prs-dns"
version = "0.2.0"
license = "MIT"
description = "DNS transport implementation for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
libp2prs-core = { version = "0.2.0", path = "../../core", package = "libp2prs-core"}
log = "0.4"
futures = "0.3.5"
async-std = "1.6"
async-trait = "0.1"

[dev-dependencies]
libp2prs-traits = { path = "../../traits", version = "0.2.0", package = "libp2prs-traits" }
libp2prs-tcp = { path = "../tcp", version = "0.2.0", package = "libp2prs-tcp" }
libp2prs-multiaddr = { path = "../../multiaddr", version = "0.2.0" , package = "libp2prs-multiaddr"}