[package]
name = "libp2prs-tcp"
version = "0.2.1"
license = "MIT"
description = "TCP/IP transport protocol for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[features]
async-std = ["libp2prs-runtime/async-std"]
tokio = ["libp2prs-runtime/tokio"]

[dependencies]
futures = { version = "0.3", features = ["std"], default-features = false }
if-addrs = "0.6.4"
ipnet = "2.0.0"
log = "0.4"
socket2 = "0.3.12"
async-trait = "0.1"
if-watch = "0.1.7"
libp2prs-core = { path = "../../core", version = "0.2.1" }
libp2prs-runtime = { path = "../../runtime", version = "0.2.1", optional = true }


