[package]
name = "libp2p-websocket"
edition = "2018"
description = "WebSocket transport for libp2p"
version = "0.0.1"
authors = ["kuang <3168582@qq.com>"]
license = "MIT"
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-tls = "0.7.0"
either = "1.5.3"
futures = "0.3.1"
libp2p-core = { version = "0.1.0", path = "../../core" }
libp2p-traits = { path = "../../traits", version = "0.1.0", package = "libp2p-traits" }
log = "0.4.8"
quicksink = "0.1"
rustls = "0.17.0"
rw-stream-sink = "0.2.0"
soketto = {version = "0.4.1", features = ["deflate"] }
url = "2.1"
webpki = "0.21"
webpki-roots = "0.18"
async-trait = "0.1"
async-std = { version = "1.6"}
libp2p-tcp = { path = "../tcp"}
libp2p-dns = { path = "../dns"}

[dev-dependencies]
env_logger = "0.6.0"
libp2p-tcp = { path = "../tcp"}
libp2p-dns = { path = "../dns"}
