[package]
name = "libp2prs-websocket"
version = "0.2.2"
license = "MIT"
description = "WebSocket transport for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[features]
async-std = ["libp2prs-tcp/async-std", "libp2prs-dns/async-std"]
tokio = ["libp2prs-tcp/tokio", "libp2prs-dns/tokio"]

[dependencies]
futures = { version = "0.3", features = ["std"], default-features = false }
log = "0.4"
async-tls = "0.11"
rustls = "0.19"
either = "1.5.3"
soketto = {version = "0.4.1", features = ["deflate"] }
url = "2.1"
webpki = "0.21.3"
webpki-roots = "0.21"
async-trait = "0.1"
libp2prs-tcp = { path = "../tcp", version = "0.2.2" }
libp2prs-dns = { path = "../dns", version = "0.2.2" }
libp2prs-core = { path = "../../core" , version = "0.2.2" }
libp2prs-traits = { path = "../../traits", version = "0.2.1" }

[dev-dependencies]
env_logger = "0.8"
libp2prs-runtime = { path = "../../runtime", version = "0.2.1", features = ["async-std"] }
